--- a/css/colors/scheme-03.css
+++ b/css/colors/scheme-03.css
@@ -2,6 +2,5 @@
   --primary-color: #331B69;
   --primary-color-rgb: 51, 27, 105;
 
-  --secondary-color: #8364E2;
-  --secondary-color-rgb: 131, 100, 226;
-}
+  --secondary-color: #F32178;
+  --secondary-color-rgb: 243, 33, 120;
